# libredu

./: Cargo.toml  Makefile.toml
client/: Cargo.toml
client/src/: lib.rs  page.rs  pages.rs  routes.rs  session.rs
client/src/page/: login.rs  sign_in.rs
client/src/pages/: login.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/models/: user.rs
ulak/: Cargo.toml
ulak/src/: admin.rs  chat_server.rs  classes.rs  forms.rs  generate.rs  main.rs  request.rs  schema.rs  school.rs  subjects.rs  teachers.rs  timetable.rs  views.rs  websocket.rs
ulak/src/models/: activity.rs  mod.rs  others.rs  school.rs  user.rs
ulak/src/util/: database.rs  forms.rs  mod.rs  responses.rs
