# TODO update `package` data and remove unnecessary `dependencies` + update deps.
[package]
name = "libredu_client"
version = "0.1.0"
repository = "https://github.com/seed-rs/seed-rs-realworld"
authors = ["Mehmet Eribol <mehmeteribol@gmail.com>"]
description = "Forked from real world application built with Seed"
categories = ["wasm", "rust", "seed", "libredu"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
chrono = "0.4"
gloo-timers = {version = "0.2", features = ["futures"]}
indexmap = { version = "1.0.2", features = [ "serde-1" ] }
lazy_static = "1.3.0"
newtype = "0.2.1"
num-integer = "0.1.41"
seed = { git = "https://github.com/seed-rs/seed/", branch="master" }
serde = "1"
serde_json = "1"
shrinkwraprs = "0.3"
strum = "0.17"
strum_macros = "0.17"
unicode-segmentation = "1.3.0"
wasm-bindgen = "0.2.56"
web-sys = { version = "0.3", features = [ "ScrollBehavior", "ScrollToOptions" ] }
shared = { path="../shared"}

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
